# albion-refine-optimizer

./: .dockerignore  .env.example  .gitignore  BUNDLE_INDEX.md  CHANGELOG.md  CLAUDE_CODE_PROMPT.md  COMMIT_CONVENTIONS.md  CONTEXT.md  CORRECTIONS_URGENTES.md  DEPLOYMENT.md  Dockerfile  IDEAS.md  README.md  SPEC.md  SPEC_FIX.md  items.json  pyproject.toml  railway.toml  requirements.txt  result.json  result.txt  vercel.json
api/: [[...path]].py  index.py
src/albion_refine/: __init__.py  aodp_client.py  api.py  cli.py  config.py  formatters.py  market.py  models.py  optimizer.py  refining.py
src/albion_refine/data/: items.json
tests/: conftest.py  test_aodp_client.py  test_buy_slippage.py  test_cli.py  test_config.py  test_enchant.py  test_formatters.py  test_market.py  test_models.py  test_multi_source.py  test_non_regression.py  test_optimizer.py  test_premium.py  test_recipes.py  test_refining.py  test_resources.py
tests/fixtures/: aodp_history_t7.json  aodp_prices_t7.json  aodp_stale_data.json
web/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts  optimize.ts
web/src/components/: AlternativesList.tsx  ChecklistPanel.tsx  FreshnessBadge.tsx  HowItWorksModal.tsx  InfoTooltip.tsx  OptimizeForm.tsx  RouteCard.tsx  ScenarioBlock.tsx  WarningBadge.tsx
web/src/lib/: cn.ts  format.ts  glossary.tsx  motion.ts
web/src/types/: optimizer.ts
