[project]
name = "albion-refine-optimizer"
version = "0.1.0"
description = "Outil d'optimisation économique pour Albion Online — raffinage bois à Fort Sterling"
readme = "README.md"
authors = [
    { name = "Duvalier", email = "duvalier@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["albion-online", "gaming", "market-analysis", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "diskcache>=5.6.3",
    "pydantic>=2.7.0",
    "python-dateutil>=2.9.0",
    # Le backend web est desormais un usage de premiere classe : on integre
    # fastapi + uvicorn aux deps de base pour que Vercel (qui n'installe que
    # [project.dependencies], pas les extras) puisse demarrer l'API sans
    # config supplementaire.
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-httpx>=0.30.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
albion-refine = "albion_refine.cli:app"
albion-refine-api = "albion_refine.api:run"

[project.urls]
Homepage = "https://github.com/Drakenarl/albion-refine-optimizer"
Repository = "https://github.com/Drakenarl/albion-refine-optimizer"
Issues = "https://github.com/Drakenarl/albion-refine-optimizer/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/albion_refine"]

# ==================== Ruff ====================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "RUF001", # caractères "ambigus" (×, →) volontaires : projet FR + notation math
    "RUF002", # idem dans les docstrings
    "RUF003", # idem dans les commentaires
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ==================== MyPy ====================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["diskcache.*"]
ignore_missing_imports = true

# ==================== Pytest ====================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/albion_refine",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src/albion_refine"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
